# ROS2_WS

./: .gitignore  MAPPING_APP_CONSOLE.md  USB_DEVICE_CONFIGURATION.md  choose_base_control_mode.sh  cleanup_voice_scripts.py  funasr_robot_control.py  open_base_control_monitor.sh  real_time_speech_recognition_pyaudio.py  run_mapping_console_bridge.sh  run_medipick_demo.sh  start_qwen_voice.sh  start_robot_nodes.sh  switch_chassis_control_mode.sh
Log/: OrbbecSDK.log.txt
medipick_moveit_workspace_backup_v4_20260409_124144/medipick_moveit_workspace/src/medipick_moveit_config/: package.xml
src/medipick_planning_interfaces/: CMakeLists.txt  package.xml
src/medipick_planning_interfaces/srv/: FetchMedicine.srv  GetMedicineLocation.srv  PlanToPose.srv  ResolveLocalPick.srv  StoreMedicineLocation.srv  UpsertCollisionBox.srv
src/medipick_planning_server/: CMakeLists.txt  SCENE_MAPPING_WORKFLOW.md  package.xml
src/medipick_planning_server/config/: apriltag_anchors.yaml  apriltag_ros.yaml  cartographer_2d_gazebo.lua  ekf_visual.yaml  fetch_medicine_coordinator.yaml  hardware_task_manager.yaml  medicine_registry_seed.yaml  nav2_holonomic.yaml  nav2_params.yaml  navigate_to_pose_weak_base.xml  navigation_task_manager.yaml  planning_server.yaml  rtabmap_visual_nav.yaml  slam_toolbox_mapper_params_gazebo.yaml
src/medipick_planning_server/launch/: gazebo_cartographer.launch.py  gazebo_nav2_auto_explore.launch.py  gazebo_nav2_pick_trial.launch.py  gazebo_nav2_saved_map_pick_trial.launch.py  gazebo_nav2_saved_map_validation.launch.py  gazebo_nav2_slam_validation.launch.py  gazebo_pick_trial.launch.py  gazebo_rtabmap_manual_mapping.launch.py  gazebo_rtabmap_slam.launch.py  gazebo_slam_toolbox.launch.py  hardware_demo.launch.py  live_mapping.launch.py  medipick_runtime.launch.py  mock_perception.launch.py  moveit_mock_demo.launch.py  pick_task_manager.launch.py  planning_demo.launch.py  scene_mapping_navigation.launch.py  scene_mapping_navigation_impl.launch.py  visual_navigation_demo.launch.py  visual_navigation_demo_impl.launch.py
src/medipick_planning_server/rviz/: mock_perception.rviz  moveit_mock_perception.rviz  pose_goal_obstacle_demo.rviz  randomized_pick_demo.rviz
src/medipick_planning_server/scripts/: bool_topic_gate.py  camera_info_stamp_republisher.py  fetch_medicine_coordinator.py  frontier_explorer.py  gazebo_box_target_publisher.py  gazebo_cmd_vel_bridge.py  gazebo_discrete_lift_controller.py  gazebo_ground_truth_localization.py  gazebo_map_publisher.py  gazebo_mapping_route_runner.py  gazebo_omni_base_driver.py  gazebo_pre_navigation_manager.py  gazebo_trial_initial_pose_manager.py  image_stamp_republisher.py  imu_ready_relay.py  latched_occupancy_grid_republisher.py  manual_mapping_posture_keeper.py  mapping_health_monitor.py  mapping_keyboard_teleop.py  medicine_location_registry.py  medicine_memory_cli.py  medicine_memory_gazebo_recorder.py  medicine_memory_registry.py  medicine_memory_store.py  medicine_memory_target_publisher.py  mock_initial_pose_manager.py  mock_pick_path_publisher.py  mock_vision_publisher.py  nav2_activation_gate.py  nav2_target_navigator.py  pick_task_flow.py  pick_task_manager.py  pick_task_runtime.py  pick_task_services.py  pick_task_shared.py  pick_task_utils.py  plan_to_pose_client.py  planning_server.py  post_pick_delivery_manager.py  rtabmap_param_tuner.py  (+2 more)
src/medipick_simple3_description/: CMakeLists.txt  package.xml
src/medipick_simple3_description/launch/: display.launch.py  simple5_asset_preview.launch.py
src/medipick_simple3_description/meshes/simple4/: base_link.STL  h1_link.STL  h2_link.STL  r4_link.STL  raise_link.STL
src/medipick_simple3_description/meshes/simple4_urdf/: sucker_link.STL
src/medipick_simple3_description/models/medicine_bottle/: model.config  model.sdf
src/medipick_simple3_description/models/medicine_box_medium/: model.config  model.sdf
src/medipick_simple3_description/models/medicine_box_small/: model.config  model.sdf
src/medipick_simple3_description/models/pharmacy_endcap_display/: model.config  model.sdf
src/medipick_simple3_description/models/pharmacy_shelf/: model.config  model.sdf
src/medipick_simple3_description/models/pharmacy_shelf_compact/: model.config  model.sdf
src/medipick_simple3_description/models/pharmacy_shelf_dense/: model.config  model.sdf
src/medipick_simple3_description/models/textured_drug_001/: model.config  model.sdf
src/medipick_simple3_description/models/textured_drug_002/: model.config  model.sdf
src/medipick_simple3_description/models/textured_drug_003/: model.config  model.sdf
src/medipick_simple3_description/rviz/: simple5_asset_preview.rviz
src/medipick_simple3_description/scripts/: simple5_asset_joint_state_publisher.py
src/medipick_simple3_description/urdf/: simple3_moveit.urdf
src/medipick_simple3_description/worlds/: medipick_pharmacy.world.sdf  medipick_pharmacy_textured.world.sdf  medipick_test.world.sdf
src/robot_hardware/: funasr_test.py  package.xml  setup.cfg  setup.py
src/robot_hardware/config/: medipick_hardware.yaml
src/robot_hardware/launch/: bms_height_controller.launch.py  funasr_speech_recognition.launch.py  joystick_teleop.launch.py  mapping_app_bridge.launch.py  qwen_voice_control.launch.py  speech_recognition.launch.py
src/robot_hardware/resource/: robot_hardware
src/robot_hardware/robot_hardware/: apriltag_anchor_localizer.py  arm_trajectory_controller_bridge.py  base_cmd_mux.py  base_pose_joint_state_bridge.py  bms_height_controller_node.py  bms_soc_reader_node.py  camera_pointcloud_target_estimator.py  camera_target_pose_relay.py  command_dispatcher_node.py  intent_understanding_node.py  joint_state_mux.py  lift_command_adapter.py  local_pick_pose_resolver.py  manual_target_pose_publisher.py  mapping_app_bridge.py  medipick_hardware_calibration.py  pump_command_adapter.py  qwen_asr_node.py  qwen_tts_player_node.py  simple_speech_recognition_node.py  speech_recognition_node.py  stm32_serial_node.py  udev_ch341_check.sh  usb_scanner.py  wheeltec_chassis_node.py  wheeltec_normalized.py  wheeltec_protocol.py
(+1322 files in other folders)
