<?xml version="1.0"?>
<package format="3">
  <name>medipick_planning_server</name>
  <version>0.1.0</version>
  <description>Planning service layer for MediPick pick motions.</description>

  <maintainer email="z15621161062@163.com">MediPick Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>medipick_moveit_config</exec_depend>
  <exec_depend>medipick_planning_interfaces</exec_depend>
  <exec_depend>medipick_simple3_description</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>orbbec_camera</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rtabmap_launch</exec_depend>
  <exec_depend>rtabmap_msgs</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
