[develop]
script_dir=$base/lib/robot_hardware

[install]
install_scripts=$base/lib/robot_hardware

[easy_install]
# Allow easy_install to work when setuptools is not already installed
allow_hosts = *

[metadata]
# Package metadata (compatible with setuptools)
name = robot_hardware
version = 0.0.0
description = ROS2 hardware interface package for robot control
license = Apache-2.0
author = jszn
author_email = jszn@todo.todo
url = https://github.com/your-repo/robot_hardware
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
# Basic package configuration
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.8
install_requires =
    setuptools
    rclpy
    std_msgs

[options.packages.find]
# Package discovery configuration
exclude =
    test*
    doc*
    example*

[options.entry_points]
# Console scripts for ROS2 nodes
console_scripts =
    stm32_serial_node = robot_hardware.stm32_serial_node:main
    bms_soc_reader_node = robot_hardware.bms_soc_reader_node:main